fix length overflow of formula

--- a/src/Components/Formula.css
+++ b/src/Components/Formula.css
@@ -20,7 +20,7 @@
   font-family: courier;
   font-size: 20px;
   font-weight: bold;
-  width: 350px;
+  width: 300px;
   height: 20px;
 }
 
@@ -35,7 +35,7 @@
   font-family: courier;
   font-size: 20px;
   font-weight: bold;
-  width: 350px;
+  width: 300px;
   height: 20px;
 }
 
